<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".ui.fragments.information.InformationFragment">

    <TextView
        style="@style/HugeHeaders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/SmallPrimaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_start_text" />

        <Button
            android:id="@+id/buttonStart"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start" />

    </LinearLayout>



</FrameLayout>