<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layoutMargin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragments.registration.RegistrationFragment">

    <TextView
        android:id="@+id/textLogIn"
        style="@style/HugeHeaders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="20dp"
        android:text="@string/registration" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFirstname"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFirstnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPassInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />


</LinearLayout>