<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    android:layout_margin="@dimen/cardViewMargin"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loanConditionsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_round_credit_card_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/MediumPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_conditions"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/imageCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/imageCard"
            app:layout_constraintTop_toTopOf="@+id/imageCard" />

        <TextView
            android:id="@+id/textMaxAmount"
            style="@style/MediumPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/maxAmount"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/imageCard"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text = "до 30000 рублей"/>


        <TextView
            android:id="@+id/textView3"
            style="@style/SmallSecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/interest_rate"
            app:layout_constraintStart_toStartOf="@+id/textMaxAmount"
            app:layout_constraintTop_toBottomOf="@+id/textMaxAmount" />

        <TextView
            android:id="@+id/textView4"
            style="@style/SmallSecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_term"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textPercent"
            style="@style/MediumPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/percentValue"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="0%" />

        <TextView
            android:id="@+id/textPeriod"
            style="@style/MediumPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentValue"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toBottomOf="@+id/textPercent"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textPercent"
            tools:text="7 дней" />

        <Button
            android:id="@+id/buttonLoanRequest"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_design"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textPercent"
            app:layout_constraintTop_toBottomOf="@+id/textPercent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>